test/programs/invalid_programs/dependent_types/wrong_return_type.jm
#!TypeError

def foo(a) -> Int
  return a()
end

def bar()
  return "bar"
end

foo(bar)
